WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66467
BORDER attribute percent with the input image tag not working.
https://bugs.webkit.org/show_bug.cgi?id=66467
Summary
BORDER attribute percent with the input image tag not working.
Mihnea Ovidenie
Reported
2011-08-18 07:18:26 PDT
Take into account border attribute for input element of type image. This is a follow up for 20226 and 65176.
Attachments
Patch
(43.58 KB, patch)
2011-08-18 07:40 PDT
,
Mihnea Ovidenie
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch 2
(44.35 KB, patch)
2011-08-19 03:47 PDT
,
Mihnea Ovidenie
simon.fraser
: review+
simon.fraser
: commit-queue-
Details
Formatted Diff
Diff
Patch 3
(12.71 KB, patch)
2011-09-01 07:02 PDT
,
Mihnea Ovidenie
simon.fraser
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch 4
(44.87 KB, patch)
2011-09-02 02:03 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Mihnea Ovidenie
Comment 1
2011-08-18 07:40:04 PDT
Created
attachment 104341
[details]
Patch
WebKit Review Bot
Comment 2
2011-08-18 08:26:59 PDT
Comment on
attachment 104341
[details]
Patch
Attachment 104341
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/9424635
New failing tests: fast/dom/HTMLInputElement/input-image-alt-text.html
Mihnea Ovidenie
Comment 3
2011-08-19 03:47:43 PDT
Created
attachment 104485
[details]
Patch 2 Mark the test: fast/dom/HTMLInputElement/input-image-alt-text.html as failing in Chromium since its expectations must be regenerated.
Simon Fraser (smfr)
Comment 4
2011-08-22 12:49:27 PDT
Comment on
attachment 104485
[details]
Patch 2 View in context:
https://bugs.webkit.org/attachment.cgi?id=104485&action=review
> Source/WebCore/ChangeLog:9 > + An image input element takes border attribute into account. > + If percent is specified in the border attribute, that percent is ignored.
This doesn't really tell me what the original problem was, and how you fixed it.
Mihnea Ovidenie
Comment 5
2011-09-01 07:02:23 PDT
Created
attachment 105953
[details]
Patch 3 Reworked changelog explanation for the patch.
WebKit Review Bot
Comment 6
2011-09-01 09:07:53 PDT
Comment on
attachment 105953
[details]
Patch 3 Rejecting
attachment 105953
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: es a/LayoutTests/platform/mac/fast/dom/HTMLInputElement/input-image-alt-text-expected.png and b/LayoutTests/platform/mac/fast/dom/HTMLInputElement/input-image-alt-text-expected.png differ". Be sure to use the --binary flag when invoking "git diff" with diffs containing binary files. at /mnt/git/webkit-commit-queue/Tools/Scripts/VCSUtils.pm line 668, <ARGV> line 97. Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Simon Fraser', u'--for..." exit_code: 9 Full output:
http://queues.webkit.org/results/9580286
Mihnea Ovidenie
Comment 7
2011-09-02 02:03:25 PDT
Created
attachment 106106
[details]
Patch 4 Forgot to add the binary image in the prev patch.
WebKit Review Bot
Comment 8
2011-09-02 10:00:48 PDT
Comment on
attachment 106106
[details]
Patch 4 Clearing flags on attachment: 106106 Committed
r94425
: <
http://trac.webkit.org/changeset/94425
>
WebKit Review Bot
Comment 9
2011-09-02 10:00:54 PDT
All reviewed patches have been landed. Closing bug.
Zoltan Horvath
Comment 10
2011-09-05 03:50:33 PDT
Qt specific result has been landed in
http://trac.webkit.org/changeset/94523
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug