BORDER attribute percent with the input image tag not working. https://bugs.webkit.org/show_bug.cgi?id=66467

Patch by Mihnea Ovidenie <mihnea@adobe.com> on 2011-09-02
Reviewed by Simon Fraser.

Source/WebCore:

This patch fixes 2 issues regarding the border attribute of an input image element.
1. The border attribute, if specified, is now taken into account and the border of the input image element is displayed.
2. If the border attribute contains percent, the border is displayed.
The value of the border attribute for input image element is now parsed according to the rules for parsing non-negative integers.
This implies that when percent is specified in the border attribute, parsing takes place and the percent is ignored.
If after parsing, the value of the border is greater than zero, the border of the input image element is displayed.

* html/HTMLElement.cpp:
(WebCore::parseBorderWidthAttribute):
(WebCore::HTMLElement::applyBorderAttribute):
* html/HTMLElement.h:
* html/HTMLImageElement.cpp:
(WebCore::HTMLImageElement::parseMappedAttribute):
* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::parseMappedAttribute):
* html/HTMLObjectElement.cpp:
(WebCore::HTMLObjectElement::parseMappedAttribute):

LayoutTests:

Test border-width-percent was modified with tests for input image element.
Expected results for input-image-alt-test were regenerated since an image input element
takes border attribute into account.
Also, mark the test as failure for chromium.

* fast/borders/border-width-percent-expected.txt:
* fast/borders/border-width-percent.html:
* platform/chromium/test_expectations.txt:
* platform/mac/fast/dom/HTMLInputElement/input-image-alt-text-expected.png:
* platform/mac/fast/dom/HTMLInputElement/input-image-alt-text-expected.txt:

Canonical link: https://commits.webkit.org/83334@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94425 268f45cc-cd09-0410-ab3c-d52691b4dbfc